--- a/lib/src/views/unusedejs/signup.ejs
+++ b/lib/src/views/unusedejs/signup.ejs
@@ -1,22 +1,15 @@
-<!-- views/signup.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Page</title>
+    <link rel="stylesheet" href="../stylesheets/signup.css">
 </head>
 <body>
     <h1>Signup Page</h1>
-
-    <% if (result.success) { %>
-        <p class="success-message"><%= result.success %></p>
-    <% } else if (result.message) { %>
-        <p class="error-message"><%= result.message %></p>
-    <% } %>
-
-    <form action="/signup" method="post">
+    
+    <form action="/users/signup" method="post">
         <!-- Your signup form fields go here -->
         <!-- You can customize this form based on your requirements -->
         <label for="fullname">Full Name:</label>
@@ -39,5 +32,21 @@
 
         <button type="submit">Signup</button>
     </form>
+
+
+    
+    <% if (EmailExistError) { %>
+        <p class="email-exist-error"><%= EmailExistError %></p>
+    <% } else if (insertUserDetailIntoDatabase) { %>
+        <p class="accout-successful-message"><%= insertUserDetailIntoDatabase %></p>
+    <% } %>
+    
+    <% if (zodError) { %>
+        <p class="zod-error"><%= zodError %></p>
+    <% } else if (databaseError) { %>
+        <p class="database-Error"><%= databaseError %></p>
+    <% } %>
+
+    
 </body>
 </html>
