--- a/lib/src/public/stylesheets/signup.css
+++ b/lib/src/public/stylesheets/signup.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #fff;
