--- a/lib/src/public/stylesheets/notes.css
+++ b/lib/src/public/stylesheets/notes.css
@@ -1,11 +1,13 @@
 body{
   margin: 0;
+  min-height: 100vh;
   padding: 0;
   box-sizing: border-box;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   font-weight: 400;
   background-image: linear-gradient(to bottom, rgba(4, 38, 81), rgb(40, 4, 81));
   color: #042651;
+  background-repeat: no-repeat;
   
 }
 
