--- a/lib/src/public/stylesheets/signup.css
+++ b/lib/src/public/stylesheets/signup.css
@@ -10,89 +10,144 @@ body {
   align-items: center;
   justify-content: center;
 }
-  
-form{
 
+form {
   background-color: #fff;
   box-shadow: 15px 15px 15px #042551ae;
   height: 80%;
   width: 35%;
-  padding: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 20px;
 }
 
-h1 {
+.existing-note-wrapper {
+  width: 100%;
+  height: 4rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.existing-note {
+  font-weight: 900;
   text-align: center;
-  color: #042651;;
+  color: #042651;
+  z-index: 1000;
+}
+
+.existing-note-img {
+  position: absolute;
+  top: 65%;
 }
 
 label {
   display: block;
   margin-bottom: 2px;
   color: #373737;
+  font-weight: 900;
+  margin-bottom: 0;
 }
 
+.gender-option-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-left: 1rem;
+  justify-content: flex-start;
+}
+
+.gender-input {
+  display: inline !important;
+  width: 5%;
+  cursor: pointer;
+  margin-top: 0 !important;
+  margin-left: .5rem;
+  padding: 2rem;
+  margin-bottom: .5rem;
+  width: 1rem;
+  height: 1rem;
+  
+}
+
+.gender-male,
+.gender-female {
+  font-weight: 500 !important;
+}
 input {
   width: 100%;
-  padding: .5rem;
+  padding: 0.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  margin-top: -5px;
+}
+input::placeholder{
+  opacity: .5;
 }
 
-.btn-wrapper{
+.btn-wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 button {
   background: linear-gradient(to bottom, rgba(4, 38, 81), rgb(40, 4, 81));
   color: white;
-  padding: .7rem 4rem;
+  height: 2.5rem;
+  width: 95%;
   border: none;
   border-radius: 50px;
   cursor: pointer;
   font-size: 1rem;
-  transition: .8s;
+  margin-top: 1rem;
+  transition: 0.8s;
 }
 
 button:hover {
   box-shadow: 15px 15px 15px #04255160;
   background: linear-gradient(to bottom, rgb(40, 4, 81), rgba(4, 38, 81));
-  transition: .8s;
-  transform: scale(1.2);
+  transition: 0.8s;
+  transform: scale(1.1);
 }
 
-.zod-error, .database-error, .email-exist-error{
+.zod-error,
+.database-error,
+.email-exist-error {
   color: #fff;
   font-weight: 700;
-  padding: .5rem 3rem;
+  padding: 0.5rem 3rem;
   box-shadow: 15px 15px 15px #042551ae;
   background-color: rgb(255, 0, 115);
-  animation: animateMe .7s forwards;
-  
+  animation: animateMe 0.7s forwards;
+
   border-radius: 50px;
 }
 
-.account-successfull-message{
+.account-successfull-message {
   color: #fff;
   font-weight: 700;
-  padding: .5rem 3rem;
+  padding: 0.5rem 3rem;
   box-shadow: 15px 15px 15px #042551ae;
   background-color: rgb(8, 207, 88);
-  animation: animateMe .7s forwards;
-  border-radius: 50px; 
+  animation: animateMe 0.7s forwards;
+  border-radius: 50px;
 }
 
 @keyframes animateMe {
-  0%{
-    transform: scale(.7);
+  0% {
+    transform: scale(0.7);
   }
-  100%{
+  100% {
     transform: scale(1);
   }
 }
-.login-link{
+.login-link {
   color: rgb(255, 247, 0);
   text-decoration: none;
 }
